--- a/templates/home.html
+++ b/templates/home.html
@@ -7,12 +7,23 @@
     <div class="page-header">
         <h1>URL shortener</h1>
         <div class="lead">
-            Beautiful is better than ugly. <br>
-            Simple is better than complex.
+            «Beautiful is better than ugly. <br>
+            Simple is better than complex.» — PEP
         </div>
     </div>
-    <form class="form-group" id="input_form" action="create_long_url" method="post">
-        <input type="text" class="form-control input-lg" placeholder="Paste your link here" name="input">
+    <form class="form-group" id="input_form" action="create_short_url" method="post">
+        <input type="text" class="form-control input-lg" placeholder="Paste your link here" id="long_url_tb" name="long_url">
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" onclick="enable_text(this.checked)" name="custom_short_url"> I want a custom short url!
+            </label>
+        </div>
+        <div class="input-group">
+            <div class="input-group-addon">domain.com/</div>
+            <input type="text" class="form-control input-lg" placeholder="some custom name" id="custom_short_url_tb" name="custom_short"
+                    disabled>
+        </div>
+    </form>
     </div>
 </div>
 
@@ -39,3 +50,12 @@
         document.getElementById('input_form').className += ' has-error';
     </script>
 {% endif %}
+
+<!-- toggle enable/disable custom_short_url_tb by checkbox -->
+<script type='text/javascript'>
+    function enable_text(status)
+    {
+        status=!status;
+        document.getElementById('custom_short_url_tb').disabled = status;
+    }
+</script>
